--- a/web/css/setup.scss
+++ b/web/css/setup.scss
@@ -24,7 +24,7 @@ $approot-relative: '../' !default;
 
 $content-border-color: $ibo-color-grey-400 !default;
 $default-font-color: $ibo-color-grey-900 !default;
-$legend-border-color: #718096 !default;
+$legend-border-color: red !default;
 $link-default-color: #1c94c4 !default;
 $link-hover-color: #EA7D1E !default;
 
